Added 256bit paytopubkeyhash addresses. Prevent coldstakingscript spendscript from being 160bit paytopubkeyhash. Added "coldstake_address" field to listtransactions. Fixed bug adding new addresses in qt receiving addresses dialog.

--- a/src/qt/forms/editaddressdialog.ui
+++ b/src/qt/forms/editaddressdialog.ui
@@ -55,6 +55,9 @@
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="cbxType">
+       <property name="locale">
+        <locale language="English" country="UnitedKingdom"/>
+       </property>
        <item>
         <property name="text">
          <string>Standard</string>
@@ -68,6 +71,11 @@
        <item>
         <property name="text">
          <string>Extended</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Standard 256bit</string>
         </property>
        </item>
       </widget>
