Fixed qt crash when generating address before importing mnemonic. Added qt option to hide notifications for incoming stake transactions.

--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -163,6 +163,16 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QCheckBox" name="showIncomingStakeNotifications">
+            <property name="toolTip">
+             <string>Display notification dialog for incoming stake transactions.</string>
+            </property>
+            <property name="text">
+             <string>&amp;Show incoming stake notifications</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
