--- a/src/qt/crown.qrc
+++ b/src/qt/crown.qrc
@@ -55,6 +55,7 @@
         <file alias="drkblue_editcopy">res/icons/drkblue_editcopy.png</file>
         <file alias="drkblue_remove">res/icons/drkblue_remove.png</file>
         <file alias="masternode">res/icons/masternode.png</file>
+        <file alias="systemnode">res/icons/systemnode.png</file>
         <file alias="browse">res/icons/browse.png</file>
         <file alias="toolbar">res/icons/toolbar.png</file>
     </qresource>
