--- a/src/qt/iop.qrc
+++ b/src/qt/iop.qrc
@@ -53,7 +53,7 @@
         <file alias="hd_enabled">res/icons/hd_enabled.png</file>
         <file alias="hd_disabled">res/icons/hd_disabled.png</file>
         <file alias="network_disabled">res/icons/network_disabled.png</file>
-        <file alias="iop_transparent">res/icons/iop_transparent.png</file>
+        <file alias="iop">res/icons/iop.png</file>
         <file alias="iop_header">res/icons/iop_header.png</file>
         <file alias="up_arrow">res/icons/up_arrow.png</file>
         <file alias="down_arrow">res/icons/down_arrow.png</file>
