Ask to create a SN/MN in case of 500/10000 CRW transaction to yourself

--- a/src/qt/forms/systemnodelist.ui
+++ b/src/qt/forms/systemnodelist.ui
@@ -81,9 +81,6 @@
                <height>0</height>
               </size>
              </property>
-             <property name="editTriggers">
-              <set>QAbstractItemView::NoEditTriggers</set>
-             </property>
              <property name="alternatingRowColors">
               <bool>true</bool>
              </property>
@@ -107,6 +104,11 @@
              <column>
               <property name="text">
                <string>Address</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>PrivateKey</string>
               </property>
              </column>
              <column>
