Created separate CreateMasternodeDialog class

--- a/src/qt/forms/systemnodelist.ui
+++ b/src/qt/forms/systemnodelist.ui
@@ -81,6 +81,9 @@
                <height>0</height>
               </size>
              </property>
+             <property name="editTriggers">
+              <set>QAbstractItemView::NoEditTriggers</set>
+             </property>
              <property name="alternatingRowColors">
               <bool>true</bool>
              </property>
