qt: adds more setPlaceholderText by form .ui instead code aproach

--- a/src/qt/forms/signverifymessagedialog.ui
+++ b/src/qt/forms/signverifymessagedialog.ui
@@ -119,7 +119,7 @@
           <string>Enter the message you want to sign here</string>
          </property>
          <property name="placeholderText">
-          <string>Enter the message you want to sign here</string>
+          <string>Enter a message to be signed</string>
          </property>
         </widget>
        </item>
@@ -279,7 +279,7 @@
             <string>The signed message to verify</string>
           </property>
           <property name="placeholderText">
-            <string>The signed message to verify</string>
+            <string>Enter a message to be verified</string>
           </property>
         </widget>
        </item>
@@ -289,7 +289,7 @@
             <string>The signature given when the message was signed</string>
           </property>
           <property name="placeholderText">
-            <string>The signature given when the message was signed</string>
+            <string>Enter a signature for the message to be verified</string>
           </property>
         </widget>
        </item>
