--- a/src/qt/forms/receivecoinsdialog.ui
+++ b/src/qt/forms/receivecoinsdialog.ui
@@ -49,12 +49,18 @@
           <property name="toolTip">
            <string>An optional label to associate with the new receiving address.</string>
           </property>
+          <property name="placeholderText">
+           <string>Enter a label to associate with the new receiving address</string>
+          </property>
          </widget>
         </item>
         <item row="6" column="2">
          <widget class="QLineEdit" name="reqMessage">
           <property name="toolTip">
            <string>An optional message to attach to the payment request, which will be displayed when the request is opened.&lt;br&gt;Note: The message will not be sent with the payment over the Dash network.</string>
+          </property>
+          <property name="placeholderText">
+           <string>Enter a message to attach to the payment request</string>
           </property>
          </widget>
         </item>
