infra: configure startup scripts to enable itcoinblock topic publishing
The topic is published on the same port where rawblock is currently being
published.

The modification is implemented in all the scripts (local and docker).

--- a/infra/bitcoin.conf.tmpl
+++ b/infra/bitcoin.conf.tmpl
@@ -31,6 +31,9 @@ zmqpubhashtx=tcp://0.0.0.0:${ZMQ_PUBHASHTX_PORT}
 # Enable publishing of raw block hex.
 zmqpubrawblock=tcp://0.0.0.0:${ZMQ_PUBRAWBLOCK_PORT}
 
+# Enable publishing of block hash, height and time
+zmqpubitcoinblock=tcp://0.0.0.0:${ZMQ_PUBITCOINBLOCK_PORT}
+
 # print logs for the bitcoin protocol events
 debug=net
 
