--- a/src/qt/forms/debugwindow.ui
+++ b/src/qt/forms/debugwindow.ui
@@ -1185,10 +1185,10 @@
                <item row="6" column="0">
                 <widget class="QLabel" name="peerRelayTxesLabel">
                  <property name="toolTip">
-                  <string>Whether the peer requested us to relay transactions.</string>
+                  <string>a.</string>
                  </property>
                  <property name="text">
-                  <string>Wants Tx Relay</string>
+                  <string>b</string>
                  </property>
                 </widget>
                </item>
