--- a/src/qt/forms/debugwindow.ui
+++ b/src/qt/forms/debugwindow.ui
@@ -1303,7 +1303,7 @@
                 </widget>
                </item>
                <item row="6" column="1">
-                <widget class="QLabel" name="peerSubversion">
+                <widget class="QLabel" name="peerUserAgent">
                  <property name="cursor">
                   <cursorShape>IBeamCursor</cursorShape>
                  </property>
